# gjs-inspector

./: .gitignore  Makefile.am  autogen.sh  configure.ac  inspector-module.c  interactive.cpp  interactive.gresource.xml  interactive.h  interactive.ui  jsParse.js  main.c  repl.js
